add breaking bad

--- a/notes/tv.html
+++ b/notes/tv.html
@@ -183,6 +183,236 @@
         </table>
       </div>
 
+      <h2>Breaking Bad / Better Call Saul</h2>
+      <div class="scroll-container">
+        <table>
+          <tr>
+            <th>Season</th>
+            <th>1</th>
+            <th>2</th>
+            <th>3</th>
+            <th>4</th>
+            <th>5</th>
+            <th>6</th>
+            <th>7</th>
+            <th>8</th>
+            <th>9</th>
+            <th>10</th>
+            <th>11</th>
+            <th>12</th>
+            <th>13</th>
+          </tr>
+          <tr>
+            <th>1</th>
+            <td>✓</td>
+            <td>✓</td>
+            <td>✓</td>
+            <td>✓</td>
+            <td>✓</td>
+            <td>✓</td>
+            <td>✓</td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+          </tr>
+          <tr>
+            <th>2</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <th>3</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <th>4</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <th>5a</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+          </tr>
+          <tr>
+            <th>5b</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+          </tr>
+          <tr>
+            <th>Film</th>
+            <td></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+          </tr>
+          <tr>
+            <th>1</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+          </tr>
+          <tr>
+            <th>2</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+          </tr>
+          <tr>
+            <th>3</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+          </tr>
+          <tr>
+            <th>4</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+          </tr>
+          <tr>
+            <th>5</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+            <td class="hatched"></td>
+          </tr>
+          <tr>
+            <th>6</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </table>
+      </div>
+
       <h2>Smiling Friends</h2>
       <div class="scroll-container">
         <table>
