--- a/index.html
+++ b/index.html
@@ -1,73 +1,18 @@
 <!doctype html>
-<html lang="en" data-theme="light">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name='viewport' content='width=device-width'/>
     <title>Carmine Cassie</title>
 
     <link rel="stylesheet" href="/assets/css/style.css">
-    <script src="/assets/js/theme.js" defer></script>
-    <script src="/assets/js/lang.js" defer></script>
 
   </head>
 
   <body>
     <div class="main-paper"><div class="main-paper-padding">
-      <button data-theme-toggle>
-        <!-- Icons from pixelarticons.com -->
-        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="dark-icon" viewBox="0 0 24 24">
-          <path d="M20 0h2v2h2v2h-2v2h-2V4h-2V2h2V0ZM8 4h8v2h-2v2h-2V6H8V4ZM6 8V6h2v2H6Zm0 8H4V8h2v8Zm2 2H6v-2h2v2Zm8 0v2H8v-2h8Zm2-2v2h-2v-2h2Zm-2-4v-2h2V8h2v8h-2v-4h-2Zm-4 0h4v2h-4v-2Zm0 0V8h-2v4h2Zm-8 6H2v2H0v2h2v2h2v-2h2v-2H4v-2Z"/>
-        </svg>
-        <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" class="light-icon" viewBox="0 0 24 24">
-          <path d="M13 0h-2v4h2V0ZM0 11v2h4v-2H0Zm24 0v2h-4v-2h4ZM13 24h-2v-4h2v4ZM8 6h8v2H8V6ZM6 8h2v8H6V8Zm2 10v-2h8v2H8Zm10-2h-2V8h2v8Zm2-14h2v2h-2V2Zm0 2v2h-2V4h2Zm2 18h-2v-2h2v2Zm-2-2h-2v-2h2v2ZM4 2H2v2h2v2h2V4H4V2ZM2 22h2v-2h2v-2H4v2H2v2Z"/>
-        </svg>
-      </button>
 
-      <!-- <button data-lang-toggle>
-        <span class="en-icon">EN</span>
-        <span class="tp-icon">&#xFFA31;</span>
-      </button> -->
-
-      <!-- <div class="en"> -->
-
-      <h1>Hello<b>!</b></h1>
-
-      <p>I'm doing some rennovations to my site, so it's a bit under construction for now<b>!</b></p>
-
-      <p>So as not to leave you disappointed, I'll spare you a sitemap:</p>
-
-      <ul>
-        <li><a href="/bingo2025">My 2025 Bingo Board</a></li>
-        <li><a href="/clock">An Astronomical Clock</a></li>
-        <!-- <li><a href="/comp1521">My COMP1521 Course Resources</a> <b>[Very WIP]</b></li> -->
-        <li><a href="/blackhole">A Black Hole Shader</a></li>
-        <li><a href="/notes/tv">My TV Tracker</a></li>
-        <!-- <li><a href="/notes">Assorted Notes</a></li> -->
-      </ul>
-
-      <p>Thanks for stopping by<b>!</b></p>
-
-      <!-- </div> -->
-
-      <!-- <div class="tp sitelen-pona">
-
-        <h1>toki a</h1>
-
-        <p>tenpo ni2 la mi pali e lipu mi. ni1 la ona li ante li kama pona</p>
-
-        <p>mi wile ala e ni3. sina tawa la sina pilin ike. ni1 la mi pana e sona pi lipu mi tawa sina</p>
-  
-        <ul>
-          <li><a href="/bingo2025">lipu pi wile mi lon tenpo sike mute1 ale mute1 luka</a></li>
-          <li><a href="/bingo2025">ilo tenpo</a></li>
-          <li><a href="/comp1521">sona mi pi ilo nanpa tan pali mi lon kulupu sona [jan,uta,weka,,nena,,sama,,pali,uta,jan,uta,]</a><b>te ike en kama pona to</b></li>
-          <li><a href="/blackhole">sitelen tawa nanpa pi suno pimeja</a></li>
-          <li><a href="/got">lipu ilo li sona e ni3: mi lukin e sitelen tawa te musi pi supa lawa to nanpa seme</a></li>
-        </ul>
-  
-        <p>pona tawa sina tan ni3: sina lukin e lipu mi</p>
-  
-      </div> -->
+      <h1>Under Construction!<b>!</b></h1>
 
     </div></div>
   </body>
