set up fonts for site redesign

--- a/index.html
+++ b/index.html
@@ -9,10 +9,27 @@
 
   </head>
 
+  <!--
+  outer layer is black letterbox
+  inside that is red background (maybe silly, maybe ignore) (4:3)
+  inside that is reading width (same as screen height)
+  inside that is header and content container
+  -->
+
   <body>
+    <img src="/assets/img/header.png" style="width:720px;image-rendering: pixelated;margin: auto;display:block;"/>
     <div class="main-paper"><div class="main-paper-padding">
 
-      <h1>Under Construction!<b>!</b></h1>
+
+      <h1>Under Construction!</h1>
+
+      <p>Hello! This is Cozette, pretty cool font, huh!</p>
+      <p class="sitelen-pona">
+        lipu ni li toki pona la ona li kepeken nasin pi leko majuna<br>
+        leko majuna la sitelen li lili mute<br>
+        ni la lipu ni la mi suli e sitelen pi leko majuna
+      </p>
+
 
     </div></div>
   </body>
