add pixel font bold style

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 
       <h1>Under Construction!</h1>
 
-      <p>Hello! This is Cozette, pretty cool font, huh!</p>
+      <p>Hello! This is <b>Cozette</b>, pretty cool font, huh!</p>
       <p class="sitelen-pona">
         lipu ni li toki pona la ona li kepeken nasin pi leko majuna<br>
         leko majuna la sitelen li lili mute<br>
-        ni la lipu ni la mi suli e sitelen pi leko majuna
+        ni la lipu ni la mi suli e sitelen pi leko majuna<br>
+        leko majuna la <b>akesi</b> li suwi a
       </p>
 
 
