add content, refine style

--- a/index.html
+++ b/index.html
@@ -18,18 +18,46 @@
 
   <body>
     <img src="/assets/img/header.png" style="width:720px;image-rendering: pixelated;margin: auto;display:block;"/>
-    <div class="main-paper"><div class="main-paper-padding">
+    <div class="main-window">
+      
+      <div class="window-header">
+        <p>carmine-cassie » blog » 2026_01_update</p>
+        <p>X</p>
+      </div>
+
+      <div class="main-paper">
 
 
-      <h1>Under Construction!</h1>
+      <h1>What I Did in January</h1>
 
-      <p>Hello! This is <b>Cozette</b>, pretty cool font, huh!</p>
+      <p>At the start of 2025, I set up a <b>Bingo Board</b> filled with goals, things I wanted to complete throughout the year. My thought process was that if I had a big menu of things to choose from, I could avoid days spent doing nothing but scrolling.</p>
+
+      <p>It worked okay, but I found my interests drifting throughout the year, and the board didn't allow for picking up new, unforseen projects! I also think it worked out to be more of a litmus test for my burnout rather than a preventative measure.</p>
+
+      <p><b>This year, I'm trying out something different!</b> I've been really enjoying finishing projects, so to motivate that, I'm planning to do a writeup at the end of each month of all the cool things I did, the catch being that only completed projects are allowed to appear. Hopefully I'll aim for smaller-scope projects and actually finish them!</p>
+
       <p class="sitelen-pona">
-        lipu ni li toki pona la ona li kepeken nasin pi leko majuna<br>
-        leko majuna la sitelen li lili mute<br>
-        ni la lipu ni la mi suli e sitelen pi leko majuna<br>
-        leko majuna la <b>akesi</b> li suwi a
+        ken la mi pali e ijo pi toki pona<br>
+        ni^ la mi toki e pali ona kepeken toki pona lon lipu ni
       </p>
+
+      <p>So, here's what I did this month!</p>
+
+      <h2>Ricing sugar-glider</h2>
+      <p>I set up my new laptop.</p>
+
+      <h2>ghosted.</h2>
+      <p>I worked on a short film.</p>
+
+      <h2>Hadestown Karaoke</h2>
+      <p>Oh yeah baby.</p>
+
+      <h2>Birthday Adventure Game</h2>
+      <p>My legs hurt so much after.</p>
+
+      <h2 class="sitelen-pona">lipu ma</h2>
+      <p class="sitelen-pona">lipu mi li kepeken nasin nasa taso ona li pona lili kin tawa mi</p>
+
 
 
     </div></div>
