fix scipnet referencing issues #2

--- a/scipnet/index.html
+++ b/scipnet/index.html
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="/projects/scipnet/style.css">
+        <link rel="stylesheet" href="/scipnet/style.css">
     </head>
     <body>
         <div style="display:flex;align-items: center;gap: 2px">
