scipnet: scale better to larger screens

--- a/scipnet/index.html
+++ b/scipnet/index.html
@@ -8,11 +8,11 @@
         <link rel="stylesheet" href="/scipnet/style.css">
     </head>
     <body>
-        <div style="display:flex;align-items: center;gap: 2px">
+        <div style="display:flex;align-items: center;gap: 2px;width: 1250px;margin:auto">
             <h1>SCiPNET/</h1>
             <p style="line-height: 11px;margin-top:-5px"><span>SECURE</span><br><span style="margin-left: -3px;">ACCESS</span><br><span style="margin-left: -6px;">TERMINAL</span></p>
         </div>
-        <div style="display:flex;align-items: flex-start;gap:18px;margin:auto;width:fit-content">
+        <div style="display:flex;align-items: flex-start;gap:18px;margin:auto;width:fit-content;width: 1350px;">
             <table id="linkTable"></table>
             <table id="001Table">
                 <tr height="15px"></tr>
