--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   -->
 
   <body>
-    <img src="/assets/img/header.png" style="width:720px;image-rendering: pixelated;margin: auto;display:block;"/>
+    <img src="/assets/img/header.png" style="width:720px;max-width:100%;image-rendering: pixelated;margin: auto;display: block;"/>
     <div class="main-window">
       
       <div class="window-header">
@@ -26,7 +26,6 @@
       </div>
 
       <div class="main-paper">
-
 
       <h1>What I Did in January</h1>
 
@@ -38,27 +37,51 @@
 
       <p class="sitelen-pona">
         ken la mi pali e ijo pi toki pona<br>
-        ni^ la mi toki e pali ona kepeken toki pona lon lipu ni
+        ni^ la mi toki e ni^ kepeken toki pona lon lipu ni
       </p>
 
       <p>So, here's what I did this month!</p>
 
       <h2>Ricing sugar-glider</h2>
-      <p>I set up my new laptop.</p>
+      <p>I'm a big fan of the concept and cost-effectiveness of purchasing refurbished ThinkPad laptops and chucking Debian onto them to serve as my daily drive. I recently picked up my second such laptop (named "sugar-glider") after the previous one ("flying-fox") kicked the bucket (citing that its network card that had worked fine for a year was now unauthorised?? :skull:)</p>
 
-      <h2>ghosted.</h2>
-      <p>I worked on a short film.</p>
+      <p>I'd been interested in using <a href="https://github.com/grassmunk/Chicago95">Chicago95</a> to set up a cool retro look for my desktop, but it requires xfce and I'd been happily using KDE Plasma for a while - I took the discontinuity brought on by the death of flying-fox as opportunity to adjust to xfce and set up Chicago95!</p>
+      
+      <p>I threw together a wallpaper, spent an embarassing half-hour looking for all the places the Windows95 blue accent colour was defined in Chicago95's theme files so as to change it to red, and ended up with this result, which I'm quite pleased with!</p>
+
+      <img class="body-image" src="/blog/26_01_rice.png"/>
+
+      <p>(Technically I did this in December last year, but I misrembered while drafting this up, and got excited to talk about it!)</p>
+
+      <h2>ghosted</h2>
+      <p>My vfx artist friend Jed reached out to me out of the blue and asked if I wanted to help him put together a submission for Tropfest, the world's largest short film festival! I have,, so little experience here so of course I excitedly said yes! He wrote, directed, and composited, and I did all the 3D work in blender.</p>
+
+      <p>We put the whole thing together in about 3 days, so I took a very kitbashy strategy - found a set of public domain PS1-style models, assebled a scene and got to playing with lighting and camera angles. I also was tasked with putting together some UI of a text messaging interface, and, for the first time in my life, character animation(!!), which was challenging but a lot of fun.</p>
+
+      <p>This is feeling like I'm writing up a personal project for a resume, yapping about all the things I was tasked with and my strategy for approaching them, but that was kind of what the experience was like! I was playing the role of a little minion with tasks to complete for my big-shot director, which was a stark contrast from, like, uni group projects I've done, wherein the team members and roles are more symmetrical.</p>
+
+      <img class="body-image" src="/blog/26_01_ghosted.png"/>
+
+      <p>[[Once <b>ghosted</b> is available online I'll chuck a link to it here!]]</p>
 
       <h2>Hadestown Karaoke</h2>
-      <p>Oh yeah baby.</p>
+      <p>The thing you gotta know about me is that I'm obssessed with Hadestown. This is not so rare of an ailment - many such cases among my friend group. I'd had a fun little idea for months and months of getting some friends together and doing a karaoke, but we just do the entirety of Hadestown, with assigned characters and all.</p>
+
+      <p>I split the script into just 5 tracks (fate and worker lines get distributed across the main five characters), got hold of some instrumental tracks of the whole show, made by <a>EJM Instrumentals</a>, and put together a karaoke video of the whole show!</p>
+
+      <p>The pipeline touched a lot of programs - text was compiled into a png in Typst, animated to move at the correct speed in Blender, I touched up the instrumental tracks and filled in some gaps (like the drum solo preceeding Epic III) with Reaper and Musescore. I even added a faint background glow that mimics the lighting cues in the actual show (such that if you have it on a tv in a dark room, the room is lit up appropriately in moments such as the Electric City line).</p>
+
+      <p>This approach was very scaled back (reverse scope creep) from a previous crack at this project, which awesomely meant I actually got it to happen! I got friends together and we did the dang thing, themed outfits and everything, and it was great fun! My personal highlight was in the layered, echoing, "it's an old song..." in Road to Hell (Reprise) we actually made a chord, the harmonies worked lol!</p>
+
+      <iframe style="margin:5px auto;display:block" width="560" height="315" src="https://www.youtube.com/embed/UevokBthQes" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+      <p>I also chucked the karaoke videos on YouTube and it's been fun to actually be able to see what YouTube analytics numbers look like? I dunno, kinda weird of me maybe, but even at a tiny scale it's fun to look through data.</p>
 
       <h2>Birthday Adventure Game</h2>
       <p>My legs hurt so much after.</p>
 
       <h2 class="sitelen-pona">lipu ma</h2>
       <p class="sitelen-pona">lipu mi li kepeken nasin nasa taso ona li pona lili kin tawa mi</p>
-
-
 
     </div></div>
   </body>
