--- a/scipnet/index.html
+++ b/scipnet/index.html
@@ -3,9 +3,12 @@
 <!-- add export and import jsons -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <link rel="stylesheet" href="/scipnet/style.css">
+        <title>SCiPNET</title>
+        <meta name='viewport' content='width=device-width'/>
+        <meta charset="utf-8" />
     </head>
     <body>
         <div style="display:flex;align-items: center;gap: 2px;width: 1250px;margin:auto">
