finalise january blog

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
       <p><b>This year, I'm trying out something different!</b> I've been really enjoying finishing projects, so to motivate that, I'm planning to do a writeup at the end of each month of all the cool things I did, the catch being that only completed projects are allowed to appear. Hopefully I'll aim for smaller-scope projects and actually finish them!</p>
 
       <p class="sitelen-pona">
-        ken la mi pali e ijo pi toki pona<br>
-        ni^ la mi toki e ni^ kepeken toki pona lon lipu ni
+        ken la mi pali e ijo pi toki pona la mi toki e ni< kepeken toki pona lon lipu ni
       </p>
 
       <p>So, here's what I did this month!</p>
@@ -51,37 +50,72 @@
 
       <img class="body-image" src="/blog/26_01_rice.png"/>
 
-      <p>(Technically I did this in December last year, but I misrembered while drafting this up, and got excited to talk about it!)</p>
+      <p>(Technically I did this in December last year, but I misrembered that fact while drafting this up, and got excited to talk about it, so here it is!)</p>
 
       <h2>ghosted</h2>
-      <p>My vfx artist friend Jed reached out to me out of the blue and asked if I wanted to help him put together a submission for Tropfest, the world's largest short film festival! I have,, so little experience here so of course I excitedly said yes! He wrote, directed, and composited, and I did all the 3D work in blender.</p>
+      <p>My vfx artist friend Jed reached out to me out of the blue and asked if I wanted to help him put together a submission for Tropfest, the world's largest short film festival! I have,, so little experience here beyond basic skills, so of course I excitedly said yes! He wrote, directed, and composited, and I did all the 3D and mograph work in Blender.</p>
 
-      <p>We put the whole thing together in about 3 days, so I took a very kitbashy strategy - found a set of public domain PS1-style models, assebled a scene and got to playing with lighting and camera angles. I also was tasked with putting together some UI of a text messaging interface, and, for the first time in my life, character animation(!!), which was challenging but a lot of fun.</p>
+      <p>We put the whole thing together in about 3 days, so I took a very kitbashy strategy - I found a set of public domain PS1-style models, assebled a scene and got to playing with lighting and camera angles. I also was tasked with putting together some UI of a text messaging interface, and, for the first time in my life, character animation(!!), which was challenging but a lot of fun.</p>
 
-      <p>This is feeling like I'm writing up a personal project for a resume, yapping about all the things I was tasked with and my strategy for approaching them, but that was kind of what the experience was like! I was playing the role of a little minion with tasks to complete for my big-shot director, which was a stark contrast from, like, uni group projects I've done, wherein the team members and roles are more symmetrical.</p>
+      <p>Writing this is feeling like I'm writing up a personal project for a resume, yapping about all the things I was tasked with and my strategy for approaching them, but that was kind of what the experience was like! I was playing the role of a little minion with tasks to complete for my big-shot director, which was a stark contrast from, like, uni group projects I've done, wherein the team members and roles are much more symmetrical.</p>
+
+      <p>I loved the experience of putting it together, and all the friends and family I've shown it to have enjoy, so hey, seems like we put a little thing of value into the world!</p>
 
       <img class="body-image" src="/blog/26_01_ghosted.png"/>
 
       <p>[[Once <b>ghosted</b> is available online I'll chuck a link to it here!]]</p>
 
       <h2>Hadestown Karaoke</h2>
-      <p>The thing you gotta know about me is that I'm obssessed with Hadestown. This is not so rare of an ailment - many such cases among my friend group. I'd had a fun little idea for months and months of getting some friends together and doing a karaoke, but we just do the entirety of Hadestown, with assigned characters and all.</p>
+      <p>The thing you gotta know about me is that I'm obssessed with <b>Hadestown</b>. This is not so rare a condition - many such cases exist among my friend group. I'd had a fun little idea for months and months of getting some friends together and doing a karaoke event, but we just do the entirety of Hadestown start-to-finish, with assigned characters and all.</p>
 
-      <p>I split the script into just 5 tracks (fate and worker lines get distributed across the main five characters), got hold of some instrumental tracks of the whole show, made by <a>EJM Instrumentals</a>, and put together a karaoke video of the whole show!</p>
+      <p>I split the script into 5 tracks (fate and worker lines get distributed across the main five characters), got hold of some instrumental tracks of the whole show, made by <a href="https://www.youtube.com/ejminstrumentals">EJM Instrumentals</a>, and put together a karaoke video of the whole show!</p>
 
-      <p>The pipeline touched a lot of programs - text was compiled into a png in Typst, animated to move at the correct speed in Blender, I touched up the instrumental tracks and filled in some gaps (like the drum solo preceeding Epic III) with Reaper and Musescore. I even added a faint background glow that mimics the lighting cues in the actual show (such that if you have it on a tv in a dark room, the room is lit up appropriately in moments such as the Electric City line).</p>
+      <p>The pipeline touched a lot of programs - lines were allocated in <b>Google Sheets</b>, the csv was compiled into a png in <b>Typst</b>, animated to move at the correct speed in <b>Blender</b>, I touched up the instrumental tracks and filled in some gaps (like the drum solo preceeding Epic III) with <b>Reaper</b> and <b>Musescore</b>. I even added a faint background glow that mimics the lighting cues in the actual show (such that if you have it on a tv in a dark room, the room is lit up appropriately in moments such as the Electric City line).</p>
 
-      <p>This approach was very scaled back (reverse scope creep) from a previous crack at this project, which awesomely meant I actually got it to happen! I got friends together and we did the dang thing, themed outfits and everything, and it was great fun! My personal highlight was in the layered, echoing, "it's an old song..." in Road to Hell (Reprise) we actually made a chord, the harmonies worked lol!</p>
+      <p>This approach was very scaled back (reverse scope creep :D) from a previous crack at this project, which fortunately meant I actually got the event to happen! I got four friends together and we did the dang thing, themed outfits and everything, and it was great fun! My personal highlight was in the layered, echoing, "it's an old song..." in Road to Hell (Reprise) - shockingly, we actually made a chord, the harmonies actually worked out! (Presumably because it's staggered lines, each remembered as a melody, rather than a big old synchronous chord that's hard for the ear to unpick.)</p>
 
-      <iframe style="margin:5px auto;display:block" width="560" height="315" src="https://www.youtube.com/embed/UevokBthQes" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe class="body-image" style="margin:5px auto;display:block;aspect-ratio: 16 / 9;" src="https://www.youtube.com/embed/UevokBthQes" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-      <p>I also chucked the karaoke videos on YouTube and it's been fun to actually be able to see what YouTube analytics numbers look like? I dunno, kinda weird of me maybe, but even at a tiny scale it's fun to look through data.</p>
+      <p>I also chucked the karaoke videos on YouTube, and it's been wild to actually be able to see what YouTube analytics numbers look like? I dunno, kinda weird of me maybe, but even at a tiny scale it's fun to look through data! :D</p>
 
       <h2>Birthday Adventure Game</h2>
-      <p>My legs hurt so much after.</p>
+      <p>I had my birthday! I'm 22 now! I was struggling with ideas for what to do for my birthday when my friend Rishi presented the idea that you can use the advent of a birthday to force your friends to engage in whatever silly activity you want.</p>
+
+      <p>I'm a fan of <a href="https://www.youtube.com/c/jetlagthegame">Jet Lag: the Game</a>, they make and play public transport adventure games - it's a really appealing and fun idea to apply game mechanics and strategising to the complexity and materiality of a public transport system.</p>
+
+      <p>I worked with Rishi to put together a lockout-bingo style Connect 4 game around Sydney (much like Jet Lag's first season). Three teams of three rush around the city, completing challenges, trying to draw a line of four locations in a row, whilst simultaenously trying to cut other teams off from winning.</p>
+      
+      <p>Our initial playthrough on the big day went by pretty fast - since the locations on the map lined up with their positions in the real world, so you could score a line by just walking around the CBD while other teams are stuck on public transport out to the suburbs!</p>
+
+      <p>We wrote some more challenges on the day, and set up a new board where the positions on the scoring grid were randomised, which was way more interesting! The more complex geometry made it harder to put together a scoring line, and more interesting to block opponents' lines! I won neither of the matches but I had the absolute most fun plotting routes, completing challenges, casting curses and just being generally super high adrenaline all day.</p>
+
+      <p>A good birthday! The day full of whimsy helped to distract from the dawning horror that I'm slowly becoming a grown-up. :p</p>
 
       <h2 class="sitelen-pona">lipu ma</h2>
-      <p class="sitelen-pona">lipu mi li kepeken nasin nasa taso ona li pona lili kin tawa mi</p>
+      <p class="sitelen-pona">tenpo ni la lipu tenpo sin li kama a</p>
+      <p class="sitelen-pona">　lipu mute lon insa ona li toki e ma kepeken nimi ma</p>
+      <p class="sitelen-pona">　　　　taso mi sona ala e nimi ma ale a</p>
+      <p class="sitelen-pona">　　　tan ni^ la mi pali e lipu ma</p>
+      <p class="sitelen-pona">nimi pi lipu ma mi li tan lipu [wile.kili.pana e sijelo. jaki.]</p>
+      <p class="sitelen-pona">　　　o lukin e lipu ma mi</p>
+
+      <img class="body-image" src="/blog/26_01_map.png"/>
+
+      <p class="sitelen-pona">ken la mi pakala anu lipu [wile] li pakala</p>
+      <p class="sitelen-pona">　　nimi ma mute pi lipu ma mi li ike lili tan pakala pi lipu [wile]</p>
+      <p class="sitelen-pona">　　　　　taso lipu ma mi li tan mi</p>
+      <p class="sitelen-pona">　　　　　　　　　li tawa mi taso</p>
+      <p class="sitelen-pona">　　　　　ni^ la ike lili li lili</p>
+      <p class="sitelen-pona">　　　　　　　　ale li pona</p>
+
+      <p><br></p>
+
+      <p class="sitelen-pona">sina wile e sitelen wawa la o tawa kepeken <a href="https://drive.google.com/file/d/1B15HANtJHzx6rQLi6k_ICEK5mdk4L_jJ/view">linja ni</a></p>
+
+      <h2>And That's It!</h2>
+      <p>It felt like a great start to the year, doing (and finishing!) all these little projects. I can feel I'll probably slow down a bit as the year goes on, but I'm excited to see if this format helps me get a move on with anything.</p>
+
+      <p>Chat to you at the end of February!</p>
 
     </div></div>
   </body>
